v 0.41. Google Analytics gtag added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <title>Rammelion Memory Game</title>
     <!--app-head-->
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR8ZC0N9JR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DR8ZC0N9JR');
+    </script>
   <body class="container-xxl container-lg container-md container-sm">
     <div class="container py-4 px-3 mx-auto">
         <div id="root"><!--app-html-->
