--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rammelion Memory Game</title>
     <!--app-head-->
+    <!-- Google -->
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('consent', 'default', {
+          'ad_user_data': 'denied',
+          'ad_personalization': 'denied',
+          'ad_storage': 'denied',
+          'analytics_storage': 'denied',
+          'wait_for_update': 500,
+        });
+        gtag('js', new Date());
+        gtag('config', 'G-DR8ZC0N9JR');
+        </script>
   </head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR8ZC0N9JR"></script>
     <script>
